[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
regex = "1.7.3"
reqwest = "0.11.16"
scraper = "0.16.0"
log = "0.4.17"
simple_logger = "4.1.0"
