[package]
edition = "2021"
name = "crawler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crawler"
path = "src/lib.rs"

[dependencies]
futures = "0.3.28"
log = "0.4.17"
regex = "1.7.3"
reqwest = "0.11.16"
scraper = "0.16.0"
simple_logger = "4.1.0"
tokio = {version = "1.27.0", features = ["full"]}
